--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { position: fixed; bottom: 8px; left: 0; right: 0; margin: 0 auto; font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
+  <header class="header">
+    <a href="/" class="logo-link"><img src="/images/logo.svg" alt="snap" title="back to main"></a>
+    <nav class="header-nav">
+      
+    </nav>
+  </header>
 
   Features
   Company
@@ -34,7 +40,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Evgenija Antonova</a>.
   </div>
 </body>
 </html>
