--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | Intro section with dropdown navigation</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -70,22 +70,22 @@
           <a href="#" class="button button--fill">Learn more</a>
           <div class="partners">
             <div>
-              <img src="../images/client-databiz.svg" alt="databiz" class="partner-logo">
+              <img src="./images/client-databiz.svg" alt="databiz" class="partner-logo">
             </div>
             <div>
-              <img src="../images/client-audiophile.svg" alt="audiophile" class="partner-logo">
+              <img src="./images/client-audiophile.svg" alt="audiophile" class="partner-logo">
             </div>
             <div>
-              <img src="../images/client-meet.svg" alt="meet" class="partner-logo">
+              <img src="./images/client-meet.svg" alt="meet" class="partner-logo">
             </div>
             <div>
-              <img src="../images/client-maker.svg" alt="maker" class="partner-logo">
+              <img src="./images/client-maker.svg" alt="maker" class="partner-logo">
             </div>
           </div>
         </div>
         <picture>
-          <source media="(min-width: 690px)" srcset="../images/image-hero-desktop.png" width="480">
-          <img src="../images/image-hero-mobile.png" alt="a man happily working" class="hero__decor">
+          <source media="(min-width: 690px)" srcset="./images/image-hero-desktop.png" width="480">
+          <img src="./images/image-hero-mobile.png" alt="a man happily working" class="hero__decor">
         </picture>
       </div>
     </section>
@@ -94,7 +94,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
-  <script src="../main.js"></script>
+  <script src="./main.js"></script>
 </body>
 
 </html>
